errores
C:\Users\usrpwcki>py -c "import http.clientimport sslimport jsonfrom datetime import datetimefrom urllib.parse import urlencodefrom os import getcwdprint('✓ Todas las dependencias básicas están disponibles')"
  File "<string>", line 1
    import http.clientimport sslimport jsonfrom datetime import datetimefrom urllib.parse import urlencodefrom os import getcwdprint('✓ Todas las dependencias básicas están disponibles')
                             ^^^^^^^^^
SyntaxError: invalid syntax

C:\Users\usrpwcki>
